--- a/tabular-cdc-bootstrapper/serverless.yml
+++ b/tabular-cdc-bootstrapper/serverless.yml
@@ -4,6 +4,10 @@ service: tabular-cdc-bootstrapper
 
 frameworkVersion: '3'
 
+custom:
+  s3_bucket_name: ${env:S3_BUCKET_NAME, 'you_can_hardcode_here'}
+  s3_bucket_path: ${env:S3_BUCKET_PATH, 'you_can_hardcode_here'}
+
 provider:
   name: aws
   runtime: python3.9
@@ -11,3 +15,6 @@ provider:
 functions:
   hello:
     handler: handler.hello
+
+plugins:
+  - serverless-python-requirements
