implemented catalog check for new files along with testing

--- a/tabular-cdc-bootstrapper/Pipfile
+++ b/tabular-cdc-bootstrapper/Pipfile
@@ -5,8 +5,8 @@ name = "pypi"
 
 [packages]
 requests = "*"
-pyiceberg = "*"
 pytest = "*"
+pyiceberg = {extras = ["s3fs"], version = "*"}
 
 [dev-packages]
 
