--- a/tabular-cdc-bootstrapper/Pipfile
+++ b/tabular-cdc-bootstrapper/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 requests = "*"
 pytest = "*"
 pyiceberg = {extras = ["s3fs"], version = "*"}
+pyarrow = "*"
+boto3 = "*"
 
 [dev-packages]
 
