largest commit ever, but batch is working with duckdb 🦆

--- a/tabular-cdc-bootstrapper/Pipfile
+++ b/tabular-cdc-bootstrapper/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 pyiceberg = {extras = ["s3fs"], version = "*"}
 pyarrow = "*"
+duckdb = "*"
 
 [dev-packages]
 pytest = "*"
