--- a/batch-bootstrapper/Makefile
+++ b/batch-bootstrapper/Makefile
@@ -1,7 +1,10 @@
 all: build run
 
 build:
-	docker build -t tabular-cdc-batch-bootstrapper .
+	docker build -t tabular-cdc-batch-bootstrapper -f Dockerfile ..
+
+build-fresh:
+	docker build -t tabular-cdc-batch-bootstrapper -f Dockerfile .. --no-cache
 
 run:
 	docker-compose up
