implemented testing and proper duck sql for batch processor

--- a/batch-bootstrapper/Makefile
+++ b/batch-bootstrapper/Makefile
@@ -3,8 +3,14 @@ all: build run
 build:
 	docker build -t tabular-cdc-batch-bootstrapper -f Dockerfile ..
 
-build-fresh:
+fresh:
 	docker build -t tabular-cdc-batch-bootstrapper -f Dockerfile .. --no-cache
 
 run:
 	docker-compose up
+
+test: build
+	docker run -it --env-file ./.env tabular-cdc-batch-bootstrapper pipenv run pytest -v
+
+run-interactive:
+	docker run -it --env-file ./.env tabular-cdc-batch-bootstrapper sh
