updated actions workflow

--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -5,20 +5,18 @@ on:
     branches: 
       - main
 
+env:
+  S3_BUCKET_NAME:           ${{ vars.S3_BUCKET_NAME }} 
+  S3_BUCKET_PATH:           ${{ vars.S3_BUCKET_PATH }}
+
+  TABULAR_CREDENTIAL:       ${{ secrets.TABULAR_CREDENTIAL }}
+  TABULAR_TARGET_WAREHOUSE: ${{ vars.TABULAR_TARGET_WAREHOUSE }}
+  TABULAR_CATALOG_URI:      ${{ vars.TABULAR_CATALOG_URI }}
+
 jobs:
-  build_and_test:
-    name: Build and test cdc bootstrapper locally (no sls deploy)
+  build_and_test_lambda:
+    name: Build and test lambda cdc bootstrapper locally (no sls deploy)
     runs-on: ubuntu-latest
-
-
-    env:
-      S3_BUCKET_NAME:           ${{ vars.S3_BUCKET_NAME }} 
-      S3_BUCKET_PATH:           ${{ vars.S3_BUCKET_PATH }}
-
-      TABULAR_CREDENTIAL:       ${{ secrets.TABULAR_CREDENTIAL }}
-      TABULAR_TARGET_WAREHOUSE: ${{ vars.TABULAR_TARGET_WAREHOUSE }}
-      TABULAR_CATALOG_URI:      ${{ vars.TABULAR_CATALOG_URI }}
-
 
     steps:
       - uses: actions/checkout@v2
@@ -31,10 +29,22 @@ jobs:
       - name: Install dependencies
         run: |
           pip install pipenv
-          cd tabular-cdc-bootstrapper
+          cd lambda-bootstrapper
           pipenv install --dev
 
       - name: Run tests
         run: |
-          cd tabular-cdc-bootstrapper
+          cd lambda-bootstrapper
           pipenv run pytest
+
+  build_and_test_batch:
+    name: Build dockerfile and execute pytest
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Run make test
+        run: |
+          cd batch-bootstrapper
+          make test
