--- a/batch-bootstrapper/Makefile
+++ b/batch-bootstrapper/Makefile
@@ -12,5 +12,8 @@ run:
 test: build
 	docker run -it --env-file ./.env tabular-cdc-batch-bootstrapper pipenv run pytest -v
 
+test-ci: build
+	docker run -it tabular-cdc-batch-bootstrapper pipenv run pytest -v
+
 run-interactive:
 	docker run -it --env-file ./.env tabular-cdc-batch-bootstrapper sh
