--- a/batch-bootstrapper/Makefile
+++ b/batch-bootstrapper/Makefile
@@ -13,7 +13,7 @@ test: build
 	docker run -it --env-file ./.env tabular-cdc-batch-bootstrapper pipenv run pytest -v
 
 test-ci: build
-	docker run -t tabular-cdc-batch-bootstrapper pipenv run pytest -v
+	docker run -t --env-file ./.env tabular-cdc-batch-bootstrapper pipenv run pytest -v
 
 run-interactive:
 	docker run -it --env-file ./.env tabular-cdc-batch-bootstrapper sh
