deleted the lambda approach

--- a/batch-bootstrapper/Makefile
+++ b/batch-bootstrapper/Makefile
@@ -1,20 +1,19 @@
 all: build run
 
 build:
-	docker build -t tabular-cdc-batch-bootstrapper -f Dockerfile ..
+	docker build -t tabular-cdc-batch-bootstrapper
 
 fresh:
-	docker build -t tabular-cdc-batch-bootstrapper -f Dockerfile .. --no-cache
+	docker build -t tabular-cdc-batch-bootstrapper --no-cache
 
 run:
 	docker-compose up
 
 test: build
-	docker run -it --env-file ./.env tabular-cdc-batch-bootstrapper pipenv run pytest -v
+	docker run --env-file ./.env tabular-cdc-batch-bootstrapper pipenv run pytest -v
 
 test-ci: build
-	cat ./.env
-	docker run -t  --env-file ./.env tabular-cdc-batch-bootstrapper pipenv run pytest -v
+	docker run --env-file ./.env tabular-cdc-batch-bootstrapper pipenv run pytest -v
 
 run-interactive:
 	docker run -it --env-file ./.env tabular-cdc-batch-bootstrapper sh
