fixed bugs and fixed tests! Man, I was on something else last night when I write this 😬

--- a/batch-bootstrapper/Makefile
+++ b/batch-bootstrapper/Makefile
@@ -10,10 +10,10 @@ run:
 	docker-compose up
 
 test: build
-	docker run --env-file .env tabular-cdc-batch-bootstrapper pipenv run pytest -v
+	docker run -t --env-file .env tabular-cdc-batch-bootstrapper pipenv run pytest -v
 
 test-ci: build
-	docker run --env-file .env tabular-cdc-batch-bootstrapper pipenv run pytest -v
+	docker run -t --env-file .env tabular-cdc-batch-bootstrapper pipenv run pytest -v
 
 run-interactive:
 	docker run -it --env-file .env tabular-cdc-batch-bootstrapper sh
