--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -26,5 +26,5 @@ jobs:
           cd batch-bootstrapper
           env | grep -E '^TABULAR_|^S3_BUCKET_' > .env # gather gh actions vars for docker test run
           echo "running with the following configs..."
-          grep -v '^TABULAR_CREDENTIAL' filename
+          grep -v '^TABULAR_CREDENTIAL' .env
           make test-ci
