Feature/05  configure fileloader and cdc props (#14)
* fixed a painful bloated dependencies issue

* wired up table creation -- next is simple table property management

* STUPID - I didn't have .github in the project root

* specified python version better for gh action

* made pipenv just a little more flexible

* made gh actions less strict

* remember to pipenv install dev deps

* added envs to gh action workflow

* fixed bad var ref for ci

* fixed state issues in unit testing

* refactor to s3_monitoring_uri syntax, split table creation into loader tables and cdc mirror tables

* small tweak to config file

* added s3 uri indicator

--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -6,8 +6,19 @@ on:
       - main
 
 jobs:
-  test:
+  build_and_test:
+    name: Build and test cdc bootstrapper locally (no sls deploy)
     runs-on: ubuntu-latest
+
+
+    env:
+      S3_BUCKET_NAME:           ${{ vars.S3_BUCKET_NAME }} 
+      S3_BUCKET_PATH:           ${{ vars.S3_BUCKET_PATH }}
+
+      TABULAR_CREDENTIAL:       ${{ secrets.TABULAR_CREDENTIAL }}
+      TABULAR_TARGET_WAREHOUSE: ${{ vars.TABULAR_TARGET_WAREHOUSE }}
+      TABULAR_CATALOG_URI:      ${{ vars.TABULAR_CATALOG_URI }}
+
 
     steps:
       - uses: actions/checkout@v2
@@ -21,7 +32,7 @@ jobs:
         run: |
           pip install pipenv
           cd tabular-cdc-bootstrapper
-          pipenv install
+          pipenv install --dev
 
       - name: Run tests
         run: |
