--- a/batch-bootstrapper/Makefile
+++ b/batch-bootstrapper/Makefile
@@ -10,10 +10,7 @@ run:
 	docker-compose up
 
 test: build
-	docker run -t --env-file .env tabular-cdc-batch-bootstrapper pipenv run pytest -v
-
-test-ci: build
-	docker run -t --env-file .env tabular-cdc-batch-bootstrapper pipenv run pytest -v
+	docker run -t --env-file .env tabular-cdc-batch-bootstrapper pipenv run pytest -v -n 4
 
 run-interactive:
 	docker run -it --env-file .env tabular-cdc-batch-bootstrapper sh
