Dockerize + Polling model (#15)
* fixed a painful bloated dependencies issue

* wired up table creation -- next is simple table property management

* STUPID - I didn't have .github in the project root

* specified python version better for gh action

* made pipenv just a little more flexible

* made gh actions less strict

* remember to pipenv install dev deps

* added envs to gh action workflow

* fixed bad var ref for ci

* fixed state issues in unit testing

* refactor to s3_monitoring_uri syntax, split table creation into loader tables and cdc mirror tables

* small tweak to config file

* added s3 uri indicator

* largest commit ever, but batch is working with duckdb 🦆

* little structure switcharoo

* adding docker building

* finished dockerization

* got docker working

* implemented testing and proper duck sql for batch processor

* updated actions workflow

* added tweaked ci test command to batch runner

* forgot to update the action 🫠

* odd input error arg to docker test command

* added env var passing for docker testing

* pipfile refresh

* debug step for test-ci for batch

* more debugging

* deleted the lambda approach

* moved test_tabular back

* fixed bugs and fixed tests! Man, I was on something else last night when I write this 😬

* ironed out new bugs in batch_bootstrapper

* got more surgical with docker env mirroring for ci job

* added env var printing, except the secret, to the gha

* fixed bad .env filename

* fixed outdated env vars in gha

* hopefully final touch on .env file creation

* added important cleanup step to table creation tests

* parallelized pytest, simplified makefile to a single make test command

* one missing resolution

--- a/batch-bootstrapper/Pipfile
+++ b/batch-bootstrapper/Pipfile
@@ -4,11 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pyiceberg = {extras = ["s3fs"], version = "*"}
+pyiceberg = "*"
+duckdb = "*"
 pyarrow = "*"
-
-[dev-packages]
 pytest = "*"
+pytest-xdist = "*"
 
 [requires]
 python_version = "3.9"
