--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -5,36 +5,28 @@ on:
     branches: 
       - main
 
+env:
+  S3_BUCKET_TO_MONITOR:        ${{ vars.S3_BUCKET_TO_MONITOR }} 
+  S3_PATH_TO_MONITOR:          ${{ vars.S3_PATH_TO_MONITOR }}
+
+  TABULAR_CREDENTIAL:          ${{ secrets.TABULAR_CREDENTIAL }}
+  TABULAR_TARGET_WAREHOUSE:    ${{ vars.TABULAR_TARGET_WAREHOUSE }}
+  TABULAR_CATALOG_URI:         ${{ vars.TABULAR_CATALOG_URI }}
+  TABULAR_CDC_ID_FIELD:        ${{ vars.TABULAR_CDC_ID_FIELD }}
+  TABULAR_CDC_TIMESTAMP_FIELD: ${{ vars.TABULAR_CDC_TIMESTAMP_FIELD }}
+
 jobs:
-  build_and_test:
-    name: Build and test cdc bootstrapper locally (no sls deploy)
+  build_and_test_batch:
+    name: Build dockerfile and execute pytest
     runs-on: ubuntu-latest
-
-
-    env:
-      S3_BUCKET_NAME:           ${{ vars.S3_BUCKET_NAME }} 
-      S3_BUCKET_PATH:           ${{ vars.S3_BUCKET_PATH }}
-
-      TABULAR_CREDENTIAL:       ${{ secrets.TABULAR_CREDENTIAL }}
-      TABULAR_TARGET_WAREHOUSE: ${{ vars.TABULAR_TARGET_WAREHOUSE }}
-      TABULAR_CATALOG_URI:      ${{ vars.TABULAR_CATALOG_URI }}
-
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-
-      - name: Install dependencies
+      - name: Run make test
         run: |
-          pip install pipenv
-          cd tabular-cdc-bootstrapper
-          pipenv install --dev
-
-      - name: Run tests
-        run: |
-          cd tabular-cdc-bootstrapper
-          pipenv run pytest
+          cd batch-bootstrapper
+          env | grep -E '^TABULAR_|^S3_' > .env # gather gh actions vars for docker test run
+          echo "running with the following configs..."
+          grep -v '^TABULAR_CREDENTIAL' .env
+          make test
