--- a/batch-bootstrapper/Pipfile
+++ b/batch-bootstrapper/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pyiceberg = "*"
 duckdb = "*"
 pytest = "*"
 pytest-xdist = "*"
+pyiceberg = {extras = ["pyarrow"], version = "*"}
 
 [requires]
 python_version = "3.9"
