--- a/batch-bootstrapper/Pipfile
+++ b/batch-bootstrapper/Pipfile
@@ -4,10 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-duckdb = "*"
-pytest = "*"
 pytest-xdist = "*"
 pyiceberg = {extras = ["pyarrow"], version = "*"}
+requests = "*"
 
 [requires]
 python_version = "3.9"
